// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSpacingClasses should validate all permutations 1`] = `Array []`;

exports[`getSpacingClasses should validate all permutations 2`] = `Array []`;

exports[`getSpacingClasses should validate all permutations 3`] = `
Array [
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 4`] = `
Array [
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 5`] = `
Array [
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 6`] = `
Array [
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 7`] = `
Array [
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 8`] = `
Array [
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 9`] = `
Array [
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 10`] = `
Array [
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 11`] = `
Array [
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 12`] = `
Array [
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 13`] = `
Array [
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 14`] = `
Array [
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 15`] = `
Array [
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 16`] = `
Array [
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 17`] = `
Array [
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 18`] = `
Array [
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 19`] = `
Array [
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 20`] = `
Array [
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 21`] = `
Array [
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 22`] = `
Array [
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 23`] = `
Array [
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 24`] = `
Array [
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 25`] = `
Array [
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 26`] = `
Array [
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 27`] = `
Array [
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 28`] = `
Array [
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 29`] = `
Array [
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 30`] = `
Array [
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 31`] = `
Array [
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 32`] = `
Array [
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 33`] = `
Array [
  "rightHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 34`] = `
Array [
  "rightHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 35`] = `
Array [
  "rightHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 36`] = `
Array [
  "rightHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 37`] = `
Array [
  "rightHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 38`] = `
Array [
  "rightHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 39`] = `
Array [
  "rightHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 40`] = `
Array [
  "rightHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 41`] = `
Array [
  "rightHalfMargin",
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 42`] = `
Array [
  "rightHalfPadding",
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 43`] = `
Array [
  "rightHalfMargin",
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 44`] = `
Array [
  "rightHalfPadding",
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 45`] = `
Array [
  "rightHalfMargin",
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 46`] = `
Array [
  "rightHalfPadding",
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 47`] = `
Array [
  "rightHalfMargin",
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 48`] = `
Array [
  "rightHalfPadding",
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 49`] = `
Array [
  "rightHalfMargin",
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 50`] = `
Array [
  "rightHalfPadding",
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 51`] = `
Array [
  "rightHalfMargin",
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 52`] = `
Array [
  "rightHalfPadding",
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 53`] = `
Array [
  "rightHalfMargin",
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 54`] = `
Array [
  "rightHalfPadding",
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 55`] = `
Array [
  "rightHalfMargin",
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 56`] = `
Array [
  "rightHalfPadding",
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 57`] = `
Array [
  "rightHalfMargin",
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 58`] = `
Array [
  "rightHalfPadding",
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 59`] = `
Array [
  "rightHalfMargin",
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 60`] = `
Array [
  "rightHalfPadding",
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 61`] = `
Array [
  "rightHalfMargin",
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 62`] = `
Array [
  "rightHalfPadding",
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 63`] = `
Array [
  "rightHalfMargin",
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 64`] = `
Array [
  "rightHalfPadding",
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 65`] = `
Array [
  "rightSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 66`] = `
Array [
  "rightSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 67`] = `
Array [
  "rightSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 68`] = `
Array [
  "rightSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 69`] = `
Array [
  "rightSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 70`] = `
Array [
  "rightSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 71`] = `
Array [
  "rightSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 72`] = `
Array [
  "rightSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 73`] = `
Array [
  "rightSingleMargin",
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 74`] = `
Array [
  "rightSinglePadding",
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 75`] = `
Array [
  "rightSingleMargin",
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 76`] = `
Array [
  "rightSinglePadding",
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 77`] = `
Array [
  "rightSingleMargin",
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 78`] = `
Array [
  "rightSinglePadding",
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 79`] = `
Array [
  "rightSingleMargin",
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 80`] = `
Array [
  "rightSinglePadding",
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 81`] = `
Array [
  "rightSingleMargin",
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 82`] = `
Array [
  "rightSinglePadding",
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 83`] = `
Array [
  "rightSingleMargin",
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 84`] = `
Array [
  "rightSinglePadding",
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 85`] = `
Array [
  "rightSingleMargin",
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 86`] = `
Array [
  "rightSinglePadding",
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 87`] = `
Array [
  "rightSingleMargin",
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 88`] = `
Array [
  "rightSinglePadding",
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 89`] = `
Array [
  "rightSingleMargin",
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 90`] = `
Array [
  "rightSinglePadding",
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 91`] = `
Array [
  "rightSingleMargin",
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 92`] = `
Array [
  "rightSinglePadding",
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 93`] = `
Array [
  "rightSingleMargin",
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 94`] = `
Array [
  "rightSinglePadding",
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 95`] = `
Array [
  "rightSingleMargin",
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 96`] = `
Array [
  "rightSinglePadding",
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 97`] = `
Array [
  "rightDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 98`] = `
Array [
  "rightDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 99`] = `
Array [
  "rightDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 100`] = `
Array [
  "rightDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 101`] = `
Array [
  "rightDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 102`] = `
Array [
  "rightDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 103`] = `
Array [
  "rightDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 104`] = `
Array [
  "rightDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 105`] = `
Array [
  "rightDoubleMargin",
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 106`] = `
Array [
  "rightDoublePadding",
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 107`] = `
Array [
  "rightDoubleMargin",
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 108`] = `
Array [
  "rightDoublePadding",
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 109`] = `
Array [
  "rightDoubleMargin",
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 110`] = `
Array [
  "rightDoublePadding",
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 111`] = `
Array [
  "rightDoubleMargin",
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 112`] = `
Array [
  "rightDoublePadding",
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 113`] = `
Array [
  "rightDoubleMargin",
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 114`] = `
Array [
  "rightDoublePadding",
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 115`] = `
Array [
  "rightDoubleMargin",
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 116`] = `
Array [
  "rightDoublePadding",
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 117`] = `
Array [
  "rightDoubleMargin",
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 118`] = `
Array [
  "rightDoublePadding",
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 119`] = `
Array [
  "rightDoubleMargin",
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 120`] = `
Array [
  "rightDoublePadding",
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 121`] = `
Array [
  "rightDoubleMargin",
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 122`] = `
Array [
  "rightDoublePadding",
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 123`] = `
Array [
  "rightDoubleMargin",
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 124`] = `
Array [
  "rightDoublePadding",
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 125`] = `
Array [
  "rightDoubleMargin",
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 126`] = `
Array [
  "rightDoublePadding",
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 127`] = `
Array [
  "rightDoubleMargin",
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 128`] = `
Array [
  "rightDoublePadding",
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 129`] = `
Array [
  "topHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 130`] = `
Array [
  "topHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 131`] = `
Array [
  "topHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 132`] = `
Array [
  "topHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 133`] = `
Array [
  "topHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 134`] = `
Array [
  "topHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 135`] = `
Array [
  "topHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 136`] = `
Array [
  "topHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 137`] = `
Array [
  "topHalfMargin",
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 138`] = `
Array [
  "topHalfPadding",
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 139`] = `
Array [
  "topHalfMargin",
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 140`] = `
Array [
  "topHalfPadding",
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 141`] = `
Array [
  "topHalfMargin",
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 142`] = `
Array [
  "topHalfPadding",
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 143`] = `
Array [
  "topHalfMargin",
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 144`] = `
Array [
  "topHalfPadding",
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 145`] = `
Array [
  "topHalfMargin",
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 146`] = `
Array [
  "topHalfPadding",
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 147`] = `
Array [
  "topHalfMargin",
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 148`] = `
Array [
  "topHalfPadding",
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 149`] = `
Array [
  "topHalfMargin",
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 150`] = `
Array [
  "topHalfPadding",
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 151`] = `
Array [
  "topHalfMargin",
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 152`] = `
Array [
  "topHalfPadding",
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 153`] = `
Array [
  "topHalfMargin",
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 154`] = `
Array [
  "topHalfPadding",
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 155`] = `
Array [
  "topHalfMargin",
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 156`] = `
Array [
  "topHalfPadding",
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 157`] = `
Array [
  "topHalfMargin",
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 158`] = `
Array [
  "topHalfPadding",
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 159`] = `
Array [
  "topHalfMargin",
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 160`] = `
Array [
  "topHalfPadding",
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 161`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 162`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 163`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 164`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 165`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 166`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 167`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 168`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 169`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 170`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 171`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 172`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 173`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 174`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 175`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 176`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 177`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 178`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 179`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 180`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 181`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 182`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 183`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 184`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 185`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 186`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 187`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 188`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 189`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 190`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 191`] = `
Array [
  "topHalfMargin",
  "rightHalfMargin",
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 192`] = `
Array [
  "topHalfPadding",
  "rightHalfPadding",
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 193`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 194`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 195`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 196`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 197`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 198`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 199`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 200`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 201`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 202`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 203`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 204`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 205`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 206`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 207`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 208`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 209`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 210`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 211`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 212`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 213`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 214`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 215`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 216`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 217`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 218`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 219`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 220`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 221`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 222`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 223`] = `
Array [
  "topHalfMargin",
  "rightSingleMargin",
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 224`] = `
Array [
  "topHalfPadding",
  "rightSinglePadding",
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 225`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 226`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 227`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 228`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 229`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 230`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 231`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 232`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 233`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 234`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 235`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 236`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 237`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 238`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 239`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 240`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 241`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 242`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 243`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 244`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 245`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 246`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 247`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 248`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 249`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 250`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 251`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 252`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 253`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 254`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 255`] = `
Array [
  "topHalfMargin",
  "rightDoubleMargin",
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 256`] = `
Array [
  "topHalfPadding",
  "rightDoublePadding",
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 257`] = `
Array [
  "topSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 258`] = `
Array [
  "topSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 259`] = `
Array [
  "topSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 260`] = `
Array [
  "topSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 261`] = `
Array [
  "topSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 262`] = `
Array [
  "topSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 263`] = `
Array [
  "topSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 264`] = `
Array [
  "topSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 265`] = `
Array [
  "topSingleMargin",
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 266`] = `
Array [
  "topSinglePadding",
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 267`] = `
Array [
  "topSingleMargin",
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 268`] = `
Array [
  "topSinglePadding",
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 269`] = `
Array [
  "topSingleMargin",
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 270`] = `
Array [
  "topSinglePadding",
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 271`] = `
Array [
  "topSingleMargin",
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 272`] = `
Array [
  "topSinglePadding",
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 273`] = `
Array [
  "topSingleMargin",
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 274`] = `
Array [
  "topSinglePadding",
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 275`] = `
Array [
  "topSingleMargin",
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 276`] = `
Array [
  "topSinglePadding",
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 277`] = `
Array [
  "topSingleMargin",
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 278`] = `
Array [
  "topSinglePadding",
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 279`] = `
Array [
  "topSingleMargin",
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 280`] = `
Array [
  "topSinglePadding",
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 281`] = `
Array [
  "topSingleMargin",
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 282`] = `
Array [
  "topSinglePadding",
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 283`] = `
Array [
  "topSingleMargin",
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 284`] = `
Array [
  "topSinglePadding",
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 285`] = `
Array [
  "topSingleMargin",
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 286`] = `
Array [
  "topSinglePadding",
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 287`] = `
Array [
  "topSingleMargin",
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 288`] = `
Array [
  "topSinglePadding",
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 289`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 290`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 291`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 292`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 293`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 294`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 295`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 296`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 297`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 298`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 299`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 300`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 301`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 302`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 303`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 304`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 305`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 306`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 307`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 308`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 309`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 310`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 311`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 312`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 313`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 314`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 315`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 316`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 317`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 318`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 319`] = `
Array [
  "topSingleMargin",
  "rightHalfMargin",
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 320`] = `
Array [
  "topSinglePadding",
  "rightHalfPadding",
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 321`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 322`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 323`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 324`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 325`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 326`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 327`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 328`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 329`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 330`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 331`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 332`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 333`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 334`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 335`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 336`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 337`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 338`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 339`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 340`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 341`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 342`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 343`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 344`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 345`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 346`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 347`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 348`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 349`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 350`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 351`] = `
Array [
  "topSingleMargin",
  "rightSingleMargin",
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 352`] = `
Array [
  "topSinglePadding",
  "rightSinglePadding",
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 353`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 354`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 355`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 356`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 357`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 358`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 359`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 360`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 361`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 362`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 363`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 364`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 365`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 366`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 367`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 368`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 369`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 370`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 371`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 372`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 373`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 374`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 375`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 376`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 377`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 378`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 379`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 380`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 381`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 382`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 383`] = `
Array [
  "topSingleMargin",
  "rightDoubleMargin",
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 384`] = `
Array [
  "topSinglePadding",
  "rightDoublePadding",
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 385`] = `
Array [
  "topDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 386`] = `
Array [
  "topDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 387`] = `
Array [
  "topDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 388`] = `
Array [
  "topDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 389`] = `
Array [
  "topDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 390`] = `
Array [
  "topDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 391`] = `
Array [
  "topDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 392`] = `
Array [
  "topDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 393`] = `
Array [
  "topDoubleMargin",
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 394`] = `
Array [
  "topDoublePadding",
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 395`] = `
Array [
  "topDoubleMargin",
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 396`] = `
Array [
  "topDoublePadding",
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 397`] = `
Array [
  "topDoubleMargin",
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 398`] = `
Array [
  "topDoublePadding",
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 399`] = `
Array [
  "topDoubleMargin",
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 400`] = `
Array [
  "topDoublePadding",
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 401`] = `
Array [
  "topDoubleMargin",
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 402`] = `
Array [
  "topDoublePadding",
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 403`] = `
Array [
  "topDoubleMargin",
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 404`] = `
Array [
  "topDoublePadding",
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 405`] = `
Array [
  "topDoubleMargin",
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 406`] = `
Array [
  "topDoublePadding",
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 407`] = `
Array [
  "topDoubleMargin",
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 408`] = `
Array [
  "topDoublePadding",
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 409`] = `
Array [
  "topDoubleMargin",
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 410`] = `
Array [
  "topDoublePadding",
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 411`] = `
Array [
  "topDoubleMargin",
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 412`] = `
Array [
  "topDoublePadding",
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 413`] = `
Array [
  "topDoubleMargin",
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 414`] = `
Array [
  "topDoublePadding",
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 415`] = `
Array [
  "topDoubleMargin",
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 416`] = `
Array [
  "topDoublePadding",
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 417`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 418`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 419`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 420`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 421`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 422`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 423`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 424`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 425`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 426`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 427`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 428`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 429`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 430`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 431`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 432`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 433`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 434`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 435`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 436`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 437`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 438`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 439`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 440`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 441`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 442`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 443`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 444`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 445`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 446`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 447`] = `
Array [
  "topDoubleMargin",
  "rightHalfMargin",
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 448`] = `
Array [
  "topDoublePadding",
  "rightHalfPadding",
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 449`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 450`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 451`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 452`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 453`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 454`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 455`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 456`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 457`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 458`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 459`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 460`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 461`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 462`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 463`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 464`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 465`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 466`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 467`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 468`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 469`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 470`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 471`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 472`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 473`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 474`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 475`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 476`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 477`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 478`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 479`] = `
Array [
  "topDoubleMargin",
  "rightSingleMargin",
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 480`] = `
Array [
  "topDoublePadding",
  "rightSinglePadding",
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 481`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 482`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 483`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 484`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 485`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 486`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 487`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 488`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 489`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
  "bottomHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 490`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
  "bottomHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 491`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
  "bottomHalfMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 492`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
  "bottomHalfPadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 493`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
  "bottomHalfMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 494`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
  "bottomHalfPadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 495`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
  "bottomHalfMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 496`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
  "bottomHalfPadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 497`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
  "bottomSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 498`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
  "bottomSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 499`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
  "bottomSingleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 500`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
  "bottomSinglePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 501`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
  "bottomSingleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 502`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
  "bottomSinglePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 503`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
  "bottomSingleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 504`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
  "bottomSinglePadding",
  "leftDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 505`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
  "bottomDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 506`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
  "bottomDoublePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 507`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
  "bottomDoubleMargin",
  "leftHalfMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 508`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
  "bottomDoublePadding",
  "leftHalfPadding",
]
`;

exports[`getSpacingClasses should validate all permutations 509`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
  "bottomDoubleMargin",
  "leftSingleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 510`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
  "bottomDoublePadding",
  "leftSinglePadding",
]
`;

exports[`getSpacingClasses should validate all permutations 511`] = `
Array [
  "topDoubleMargin",
  "rightDoubleMargin",
  "bottomDoubleMargin",
  "leftDoubleMargin",
]
`;

exports[`getSpacingClasses should validate all permutations 512`] = `
Array [
  "topDoublePadding",
  "rightDoublePadding",
  "bottomDoublePadding",
  "leftDoublePadding",
]
`;
